# cascadeur-mcp-server

./: .gitignore  .mcp.json  README.md  install_bridge.py  pyproject.toml  run_panel.py  test_bridge.py
.claude/skills/animation-craft/: SKILL.md  cascadeur-actions.md  humanoid-rules.md
cascadeur_side/mcp_bridge/: _impl.py  exec_bridge.py
cascadeur_side/mcp_bridge/ops/: __init__.py  ai_ops.py  anim_ops.py  bonemap_ops.py  fbx_ops.py  keyframe_ops.py  object_ops.py  retarget_ops.py  rig_ops.py  rigmodel_ops.py  scene_ops.py  tool_ops.py  transform_ops.py
cascadeur_side/tools_pro/: _common.py  export_unity.py  fbx_writer.py  panel.py  physics_fill.py  retarget.py  rig_mixamo.py
src/cascadeur_mcp_pro/: bridge_client.py  dataset.py  fbx_writer.py  panel.html  panel_server.py  physics.py  pipe_client.py  rigmodel.py  server.py
