[project]
name = "cascadeur-mcp-pro"
version = "0.1.0"
description = "Deep MCP integration for Cascadeur: scenes, FBX, rig inspection, transforms, keyframes, quick-rig automation"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
]

[project.scripts]
cascadeur-mcp-pro = "cascadeur_mcp_pro.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cascadeur_mcp_pro"]
